[package]
name = "todos-rs"
version = "0.1.0"
authors = ["Ryan Zeigler <zeiglerr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
futures = { version = "0.3.5" }
warp = "0.2"
rusqlite = "0.23.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"